<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"

    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="729dp"
        android:layout_margin="@android:dimen/app_icon_size"
        android:background="#CDC6AE"

        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_num1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="1dp"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_simbolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/id_simbolo"
                android:textColor="#FFFFFF"
                android:textScaleX="1.5"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_num2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="0dp"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="#FFFFFF"
                android:textSize="45sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_generar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#F57851"
            android:onClick="generar"
            android:text="@string/id_generar"
            android:textColor="#FFFFFF"
            android:textSize="31sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_suma"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#EE6352"
                android:onClick="sumar"
                android:text="+"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/bt_resta"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#59CD90"
                android:onClick="restar"
                android:text="-"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/bt_reset"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#3FA7D6"
                android:onClick="resetear"
                android:text="C"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bt_por"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#FAC05E"
                android:onClick="multiplicar"
                android:text="X"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />

            <Button
                android:id="@+id/bt_div"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#F79D84"
                android:onClick="dividir"
                android:text="/"
                android:textColor="#FFFFFF"
                android:textSize="50sp" />
        </LinearLayout>

        <Button
            android:id="@+id/bt_par"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="#85CB33"
            android:onClick="esPar"
            android:text="@string/id_par"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bt_primo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#725AC1"
            android:onClick="esPrimo"
            android:text="@string/id_primo"
            android:textColor="#FFFFFF"
            android:textSize="31sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#D81E5B"
            android:gravity="center"
            android:text="@string/id_txt_resultado"
            android:textColor="#FFFFFF"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_resultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#58355E"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="31sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="#D81E5B"
            android:gravity="center"
            android:text=" "
            android:textColor="#FFFFFF"
            android:textSize="31sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>